--- a/site-sass/site-specific/site.post-standard.scss
+++ b/site-sass/site-specific/site.post-standard.scss
@@ -1,6 +1,8 @@
 
 .single-module {
-  padding: 0 30px;
+  @include mq(desktop) { 
+    padding: 0 30px;
+  }
 }
 
 .format-standard {
